mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  ports:
    - name: mysql-mysql
      port: 3306
      targetPort: 3306
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  strategy: 
    type: Recreate
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
        - name: mysql-vol
          persistentVolumeClaim:
            claimName: wordpress
      containers:
        - name: mysql
          image: mysql:5.7.31
          imagePullPolicy: Always
          volumeMounts:
            - name: mysql-vol
              subPath: mysql-vol
              mountPath: /var/lib/mysql
          ports:
            - name: tcp
              containerPort: 3306
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 90
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 3306
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 3306
          resources:
            limits:
              cpu: "2"
              memory: "1Gi"
            requests:
              cpu: "1"
              memory: "512Mi"
