nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - name: http-nginx
      port: 80
      targetPort: 80
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      volumes:
        - name: wordpress-vol
          persistentVolumeClaim:
            claimName: wordpress
        - name: nginx
          configMap:
            defaultMode: 0755
            name: nginx
      containers:
        - name: nginx
          image: nginx:1.19.0-alpine
          imagePullPolicy: Always
          volumeMounts:
            - name: wordpress-vol
              subPath: wordpress-vol
              mountPath: /var/www/html
            - name: nginx
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 80
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 80
          resources:
            limits:
              cpu: "2"
              memory: "200Mi"
            requests:
              cpu: "1"
              memory: "100Mi"
