redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - name: redis-redis
      port: 6379
      targetPort: 6379
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: redis-vol
          persistentVolumeClaim:
            claimName: wordpress
      containers:
        - name: redis
          image: redis:6.0.7
          imagePullPolicy: Always
          volumeMounts:
            - name: redis-vol
              subPath: redis-vol
              mountPath: /data
          ports:
            - name: tcp-redis
              containerPort: 6379
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 90
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 6379
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            tcpSocket:
              port: 6379
          resources:
            limits:
              cpu: "1"
              memory: "100Mi"
            requests:
              cpu: "0.5"
              memory: "50Mi"
