wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  selector:
    app: wordpress
  ports:
    - name: tcp-wordpress
      port: 9000
      targetPort: 9000
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      version: v1
  template:
    metadata:
      labels:
        app: wordpress
        version: v1
    spec:
      volumes:
        - name: wordpress-vol
          persistentVolumeClaim:
            claimName: wordpress
        - name: wordpress
          configMap:
            defaultMode: 0755
            name: wordpress
      containers:
        - name: wordpress
          image: wordpress:5.5.1-php7.2-fpm
          imagePullPolicy: Always
          volumeMounts:
            - name: wordpress-vol
              subPath: wordpress-vol
              mountPath: /var/www/html
            - name: wordpress
              mountPath: /usr/local/etc/php/php.ini
              subPath: php.ini
            - name: wordpress
              mountPath: /usr/local/etc/php-fpm.d/www.conf
              subPath: www.conf
          ports:
            - name: tcp
              containerPort: 9000
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 9000
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 9000
          resources:
            limits:
              cpu: "2"
              memory: "512Mi"
            requests:
              cpu: "1"
              memory: "200Mi"
