gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS
  #   tls:
  #     mode: SIMPLE
  #     credentialName: www-xiaomo-io
  #   hosts:
  #   - "www.xiaomo.io"
  - port:
      number: 80
      name: http
      protocol: HTTP
    # tls:
    #   httpsRedirect: true
    hosts:
      - "www.xiaomo.io"
