ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  tls:
    - hosts:
      - www.xiaomo.io
      secretName: www-xiaomo-io
  rules:
    - host: www.xiaomo.io
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx
              servicePort: 80
